// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GIVEN NextExport pod WHEN copy siteBanner AND WHEN siteBanner exist THEN banner is copied 1`] = `"export default function Banner { return <div> Banner </div> };"`;

exports[`GIVEN nextjs export WHEN config.dev.enableExperimentalIFrameNoteRef is true WHEN a noteref has a header, it should not have a .anchor-heading a tag 1`] = `
"<p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Public</span></div>
<a href=\\"/notes/public\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><h1 id=\\"my-header-tag\\">My header tag</h1>
<p>should not have an anchor tag</p>
</div></div><p></p>"
`;

exports[`GIVEN nextjs export WHEN config.dev.enableExperimentalIFrameNoteRef is true WHEN note ref is the root of a hierarchy, link should be / not /notes/ 1`] = `
"<p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Public</span></div>
<a href=\\"/\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>I'm the homepage, my url as a ref should be /</p>
</div></div><p></p>"
`;

exports[`GIVEN nextjs export WHEN config.dev.enableExperimentalIFrameNoteRef is true WHEN note ref is the root of a hierarchy, link should be / not /notes/ 2`] = `
"<p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Subnote 2</span></div>
<a href=\\"/notes/public.subnote-2\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>I should be /notes/subnote-2</p>
</div></div><p></p>"
`;

exports[`GIVEN nextjs export WHEN config.dev.enableExperimentalIFrameNoteRef is true WHEN note ref of a note that references itself 1`] = `
"<p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Public</span></div>
<a href=\\"/\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>public content
</p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Public</span></div>
<a href=\\"/\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>public content
</p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Public</span></div>
<a href=\\"/\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>public content
</p><blockquote>
too many nested note refs
</blockquote><p></p>
</div></div><p></p><p></p>
</div></div><p></p><p></p>
</div></div><p></p>"
`;

exports[`GIVEN nextjs export WHEN config.dev.enableExperimentalIFrameNoteRef is true WHEN note ref of a note with anchor  1`] = `
"<p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Private</span></div>

</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><h1 id=\\"anchor2\\">anchor2</h1>
<p>anchor 2 content</p>
</div></div><p></p>"
`;

exports[`GIVEN nextjs export WHEN config.dev.enableExperimentalIFrameNoteRef is true WHEN note ref of a private note  1`] = `
"[
  \\"private---0\\"
]
"
`;

exports[`GIVEN nextjs export WHEN config.dev.enableExperimentalIFrameNoteRef is true WHEN note ref of a private note  2`] = `
"<p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Private</span></div>

</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><ul>
<li><a href=\\"/notes/public\\">public</a></li>
<li><a title=\\"Private\\" href=\\"https://wiki.dendron.so/notes/hfyvYGJZQiUwQaaxQO27q.html\\" target=\\"_blank\\" class=\\"private\\">Private (Private)</a></li>
<li><a href=\\"/notes/public.one\\">One</a></li>
</ul>
</div></div><p></p>"
`;
